--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         } else if(os === "Android") {
             window.location.replace("https://fzy-foodtech.notion.site/android-6fb24093a87b47f3856fa37bafbed219");
         } else {
-            document.getElementById("logo").style.visibility = "hidden";
-            document.getElementById("android").style.visibility = "visible";
-            document.getElementById("ios").style.visibility = "visible";
+            window.location.replace("https://fzy-foodtech.notion.site/fzy-foodtech/b59c4187e0aa4cca8917c2cf8d2f4a92");
         }
     }
     </script>
@@ -58,12 +56,6 @@
     </head>
 
     <body>
-
-        <h2>Як встановити додаток?</h2>
-
-        <a id="android" href="https://fzy-foodtech.notion.site/android-6fb24093a87b47f3856fa37bafbed219" class="button">Android</a>
-        <br>
-        <a id="ios" href="https://fzy-foodtech.notion.site/iPhone-b700ad3bf0614f6c89bd3211560d9524" class="button">iOS</a>
 
         <div id="logo" style="width: 50%;margin: 0 auto;padding-top: 30%">
             <svg viewBox="0 0 307.59 118.85"><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><g id="Group_2678" data-name="Group 2678"><g id="Group_2435" data-name="Group 2435"><path id="Path_1681" data-name="Path 1681" fill="#ff8522" d="M307.58,42.12s-.11,3.09-.34,4.5A35.08,35.08,0,0,1,287,74.06a130.2,130.2,0,0,1-23,7C241.92,85.34,
